tests/snapshots/examples_fixtures/basics__list_basic.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/list_basic.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `rest`.

  examples/basics/list_basic.flx:34:11
   |
34 |     print(rest(to_list(my_array)));
   |           ^^^^

Hint:
  Define it first: let rest = ...;


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/basics/list_basic.flx:40:11
   |
40 |     print(first(xs))
   |           ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `rest`.

  examples/basics/list_basic.flx:41:11
   |
41 |     print(rest(xs))
   |           ^^^^

Hint:
  Define it first: let rest = ...;


error[E004]: Undefined Variable

I can't find a value named `reverse`.

  examples/basics/list_basic.flx:59:11
   |
59 |     print(reverse(xs))
   |           ^^^^^^^

Hint:
  Define it first: let reverse = ...;


error[E004]: Undefined Variable

I can't find a value named `contains`.

  examples/basics/list_basic.flx:62:11
   |
62 |     print(contains(xs, 2))
   |           ^^^^^^^^

Hint:
  Define it first: let contains = ...;


error[E004]: Undefined Variable

I can't find a value named `contains`.

  examples/basics/list_basic.flx:63:11
   |
63 |     print(contains(xs, 9))
   |           ^^^^^^^^

Hint:
  Define it first: let contains = ...;

Found 6 errors.
== stdout ==
<not executed>
